Initial project upload

--- a/practice/self/templates/self/all_self.html
+++ b/practice/self/templates/self/all_self.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Home Page
+    About Self
 {% endblock %}
 
 {% block content %}
-<h1 class="bg-red-500 text-xl">Chai aur  Code | Home Page</h1>
+<h1>Hi! I an Ayush Gupta</h1>
 {% endblock %}
